tests/samples/negative/pointers/unsafe_deref_required.ax
module unsafe_deref_required;

fn main() -> i32 {
    var value: i32 = 1;
    let ptr: *const i32 = &value;
    return *ptr;
}
